// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`surface/Surface  1`] = `
.emotion-0 {
  background-color: #ffffff;
  padding: 0 0;
  border-radius: 0;
}

<div
  className="emotion-0"
/>
`;

exports[`surface/Surface  2`] = `
.emotion-0 {
  background-color: #f5f5f5;
  padding: 0 0;
  border-radius: 0;
}

<div
  className="emotion-0"
/>
`;

exports[`surface/Surface  3`] = `
.emotion-0 {
  background-color: #ffffff;
  padding: 0 12px;
  border-radius: 0;
}

<div
  className="emotion-0"
/>
`;

exports[`surface/Surface  4`] = `
.emotion-0 {
  background-color: #ffffff;
  padding: 12px 0;
  border-radius: 0;
}

<div
  className="emotion-0"
/>
`;

exports[`surface/Surface  5`] = `
.emotion-0 {
  background-color: #ffffff;
  padding: 0 0;
  border-radius: 0;
  box-shadow: 0 0 16px 0 rgba(0,0,0,0.2);
}

<div
  className="emotion-0"
/>
`;

exports[`surface/Surface  6`] = `
.emotion-0 {
  background-color: #ffffff;
  padding: 0 0;
  border-radius: 0;
}

<div
  className="emotion-0"
/>
`;

exports[`surface/Surface  7`] = `
.emotion-0 {
  background-color: #ffffff;
  padding: 0 0;
  border-radius: 0;
}

<span
  className="emotion-0"
/>
`;

exports[`surface/Surface  8`] = `
.emotion-0 {
  background-color: #ffffff;
  padding: 0 0;
  border-radius: 0;
}

<div
  className="emotion-0 test-classname"
/>
`;
